Kubernetes/simpleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-svc
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30000
  selector:
    app: simpleapp-python
