Kubernetes/simpleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-ingress
  labels:
    name: simpleapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.prova
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
